cabal-version: 2.4

name: hs-blog
version: 0.1.0.0
synopsis: A custom blog generator from markup files
description: following along with the LHBG book
homepage: https://github.com/soupi/learn-haskell-blog-generator
bug-reports: https://github.com/soupi/learn-haskell-blog-generator/issues
license: BSD-3-Clause
license-file: LICENSE.txt
author: dylan
maintainer: dylan
category: learning
extra-doc-files:
  README.md

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall
  default-extensions:
    ImportQualifiedPost

library
  import: common-settings
  hs-source-dirs: src
  build-depends:
    base,
    optparse-applicative,
    directory
  exposed-modules:
    HSBlog
      HSBlog.Convert
      HSBlog.Html
      HSBlog.Markup
  -- other-modules:

executable hs-blog-gen
  import: common-settings
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    OptParse
  build-depends:
    base,
    directory,
    optparse-applicative,
    hs-blog
  ghc-options:
    -O
